@@ -1,14 +1,23 @@
 package com.bungeobbang.backend.agenda.service;
 
+import com.bungeobbang.backend.agenda.domain.AgendaAdminLastReadChat;
+import com.bungeobbang.backend.agenda.domain.AgendaChat;
+import com.bungeobbang.backend.agenda.domain.repository.AdminLastReadChatRepository;
 import com.bungeobbang.backend.agenda.domain.repository.AgendaChatRepository;
+import com.bungeobbang.backend.agenda.domain.repository.CustomAgendaChatRepository;
+import com.bungeobbang.backend.agenda.dto.request.AgendaChatRequest;
 import com.bungeobbang.backend.agenda.dto.response.AgendaChatResponse;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.event.TransactionalEventListener;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * ✅ 관리자용 답해요 채팅 서비스 (무한 스크롤 지원)
@@ -22,8 +31,13 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class AdminAgendaChatService {
-    private static final int CHAT_SIZE = 10;
+
     private final AgendaChatRepository agendaChatRepository;
+    private static final int CHAT_SIZE = 10;
+    private static final ObjectId MIN_OBJECT_ID = new ObjectId(0, 0);
+    private final CustomAgendaChatRepository customAgendaChatRepository;
+    private final AdminLastReadChatRepository agendaLastReadChatRepository;
+    private static final ObjectId MAX_OBJECT_ID = new ObjectId("ffffffffffffffffffffffff");
 
     /**
      * ✅ 답해요 채팅 내역 조회 (무한 스크롤 방식)
@@ -35,21 +49,71 @@ public class AdminAgendaChatService {
      * @return `AgendaChatResponse` 리스트 (최대 10개)
      */
     public List<AgendaChatResponse> getChats(Long adminId, Long agendaId, ObjectId chatId) {
-
         Pageable pageable = PageRequest.of(0, CHAT_SIZE);
 
-        // ✅ 최신 채팅 10개 조회 (첫 페이지)
         if (chatId == null) {
-            return agendaChatRepository.findAllByAgendaId(agendaId, true, pageable)
+            // 사용자의 마지막 읽은 채팅 가져오기
+            AgendaAdminLastReadChat lastReadChat = agendaLastReadChatRepository.findByAdminIdAndAgendaId(adminId, agendaId)
+                    .orElse(new AgendaAdminLastReadChat(null, null, null, MIN_OBJECT_ID));
+            ObjectId lastReadChatId = lastReadChat.getLastReadChatId();
+
+            // lastReadChatId보다 작은 채팅 가져오기
+            List<AgendaChatResponse> chats = agendaChatRepository
+                    .findChatsByAgendaIdAndIdLessThan(agendaId, lastReadChatId, pageable)
                     .stream()
                     .map(AgendaChatResponse::from)
-                    .toList();
+                    .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                        Collections.reverse(list); // 🔹 리스트 역순 정렬
+                        return list;
+                    }));
+
+            // lastReadChatId보다 큰 채팅 가져오기
+            List<AgendaChatResponse> afterChats = agendaChatRepository
+                    .findChatsByAgendaIdAndIdGreaterThan(agendaId, lastReadChatId)
+                    .stream()
+                    .map(AgendaChatResponse::from)
+                    .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                        Collections.reverse(list); // 🔹 리스트 역순 정렬
+                        return list;
+                    }));
+
+            chats.addAll(afterChats); // 최종 리스트 합치기
+
+            return chats;
         }
 
         // ✅ 특정 `chatId` 이전의 채팅 10개 조회 (무한 스크롤)
-        return agendaChatRepository.findAllByAgendaIdAndIdLessThan(agendaId, true, chatId, pageable)
+        return agendaChatRepository.findChatsByAgendaIdAndIdLessThan(agendaId, chatId, pageable)
                 .stream()
                 .map(AgendaChatResponse::from)
-                .toList();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                    Collections.reverse(list);
+                    return list;
+                }));
+    }
+
+    public void saveChat(AgendaChatRequest request) {
+        agendaChatRepository.save(AgendaChat.builder()
+                .images(request.images())
+                .isAdmin(true)
+                .agendaId(request.agendaId())
+                .chat(request.chat())
+                .createdAt(request.createdAt())
+                .build());
+    }
+
+    public void updateLastReadToMax(Long agendaId, Long adminId) {
+        customAgendaChatRepository.upsertAdminLastReadChat(agendaId, adminId, MAX_OBJECT_ID);
+    }
+
+    public void updateLastRead(Long agendaId, Long adminId) {
+        final AgendaChat lastChat = customAgendaChatRepository.findLastChat(agendaId);
+        customAgendaChatRepository.upsertAdminLastReadChat(agendaId, adminId, lastChat.getId());
+    }
+
+    @TransactionalEventListener
+    @Async
+    public void saveAgendaChat(AgendaChatRequest event) {
+        saveChat(event);
     }
 }
